--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -20,7 +20,8 @@
     "node-sass": "^4.13.1",
     "react-bootstrap": "^1.0.1",
     "styled-components": "^5.1.0",
-    "react-vis": "^1.6.7"
+    "react-vis": "^1.6.7",
+    "html-react-parser": "^0.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
